# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[metadata]
license_files =
  ../LICENSE.txt
  ../NOTICE.txt

[build_sphinx]
source-dir = doc/
build-dir  = doc/_build

[tool:pytest]
addopts = --ignore=scripts
filterwarnings =
    error:The SparseDataFrame:FutureWarning

[mypy]
ignore_missing_imports=True
no_implicit_optional=True
check_untyped_defs=True
strict_equality=True

[mypy-pyarrow.tests.test_convert_builtin]
# Needs TypedDict
check_untyped_defs=False
[mypy-pyarrow.tests.test_cuda]
# TODO(ARROW-XXXX): Convert global_context to a module level fixture
check_untyped_defs=False
[mypy-pyarrow.tests.test_cuda_numba_interop]
# TODO(ARROW-XXXX): Convert context_choices to a module level fixture
check_untyped_defs=False
[mypy-pyarrow.tests.test_hdfs]
# TODO(ARROW-XXXX): We need to convert the setup/teardown routines to module-level yielded fixtures
check_untyped_defs=False
